entity-select onCreate works w/ multiSelect fields

--- a/client/src/app/forms2/types/therapy-select/therapy-select.type.html
+++ b/client/src/app/forms2/types/therapy-select/therapy-select.type.html
@@ -11,6 +11,7 @@
   [cvcResults]="result$ | ngrxPush"
   [cvcSelectMode]="props.isMultiSelect ? 'multiple' : 'default'"
   [cvcShowError]="showError"
+  [cvcSelectOpen]="selectOpen$ | ngrxPush"
   (cvcOnSearch)="onSearch$.next($event)"
   (cvcOnModelChange)="props.change && props.change(field, $event)">
 </cvc-entity-select>
