display molecular profile count on more popovers and tables

--- a/client/src/app/components/phenotypes/phenotype-popover/phenotype-popover.component.html
+++ b/client/src/app/components/phenotypes/phenotype-popover/phenotype-popover.component.html
@@ -25,6 +25,10 @@
           nzSpan="2">
           {{p.evidenceItemCount}}
         </nz-descriptions-item>
+        <nz-descriptions-item nzTitle="Molecular Profiles"
+          nzSpan="2">
+          {{p.molecularProfileCount}}
+        </nz-descriptions-item>
       </nz-descriptions>
     </nz-card>
   </ng-container>
