--- a/client/src/app/components/therapies/cvc-therapy-popover/cvc-therapy-popover.component.html
+++ b/client/src/app/components/therapies/cvc-therapy-popover/cvc-therapy-popover.component.html
@@ -33,6 +33,10 @@
           nzSpan="2">
           {{d.evidenceItemCount}}
         </nz-descriptions-item>
+        <nz-descriptions-item nzTitle="Molecular Profiles"
+          nzSpan="2">
+          {{d.molecularProfileCount}}
+        </nz-descriptions-item>
       </nz-descriptions>
     </nz-card>
   </ng-container>
