source-select quick add form's model updated with select model

--- a/client/src/app/forms2/components/entity-select/entity-select.component.html
+++ b/client/src/app/forms2/components/entity-select/entity-select.component.html
@@ -26,12 +26,15 @@
 </nz-select>
 <ng-template #searchMessages>
   <ng-container *ngrxLet="onSearchMessage$ as msg">
+    {{ msg }}
     <ng-container
       *ngrxLet="cvcOnSearch as searchStr"
       [ngTemplateOutlet]="this.cvcAddEntity"
       [ngTemplateOutletContext]="{
         $implicit: searchStr,
-        createMsg: msg
-      }"></ng-container>
+        createMsg: msg,
+        model: cvcAddEntityModel
+      }">
+    </ng-container>
   </ng-container>
 </ng-template>
