--- a/client/src/app/components/molecular-profiles/molecular-profile-variant-card/molecular-profile-variant-card.component.html
+++ b/client/src/app/components/molecular-profiles/molecular-profile-variant-card/molecular-profile-variant-card.component.html
@@ -8,15 +8,15 @@
             <nz-row [nzGutter]="[8,8]">
                 <!-- gene attributes block -->
                 <nz-col nzSpan="24">
-                    <nz-descriptions nzLayout="horizontal" nzSize="small" [nzColumn]="2" nzBordered="true">
-                        <nz-descriptions-item nzTitle="Variant">
+                    <nz-descriptions nzLayout="horizontal" nzSize="small" [nzColumn]="4" nzBordered="true">
+                        <nz-descriptions-item [nzSpan]="2" nzTitle="Variant">
                             <cvc-variant-tag [variant]="variant"></cvc-variant-tag>
                         </nz-descriptions-item>
-                        <nz-descriptions-item nzTitle="Gene">
+                        <nz-descriptions-item [nzSpan]="2" nzTitle="Gene">
                             <cvc-gene-tag [gene]="variant.gene"></cvc-gene-tag>
                         </nz-descriptions-item>
                         <!-- aliases -->
-                        <nz-descriptions-item nzTitle="Aliases">
+                        <nz-descriptions-item [nzSpan]="2" nzTitle="Aliases">
                             <ng-container *ngIf="variant.variantAliases.length > 0; else noAliases">
                                 <cvc-tag-list>
                                     <nz-tag *ngFor="let alias of variant.variantAliases">{{ alias }}</nz-tag>
@@ -29,6 +29,7 @@
 
                         <!-- variant type(s) -->
                         <nz-descriptions-item
+                            [nzSpan]="2"
                             [nzTitle]="variant.variantTypes.length > 1 ? 'Variant Types' : 'Variant Type'">
                             <ng-container *ngIf="variant.variantTypes.length > 0; else noTypes">
                                 <cvc-tag-list>
@@ -42,19 +43,23 @@
                         </nz-descriptions-item>
 
                         <!-- allele reg. id -->
-                        <nz-descriptions-item nzTitle="Allele Registry ID">
-                            <cvc-link-tag *ngIf="variant.alleleRegistryId; else noAlleleRegistry"
-                                [href]="'https://reg.genome.network/allele/' + variant.alleleRegistryId + '.html'"
-                                tooltip="View on ClinGen Allele Registry">
-                                {{ variant.alleleRegistryId }}
-                            </cvc-link-tag>
+                        <nz-descriptions-item 
+                            [nzSpan]="2"
+                            nzTitle="Allele Registry ID">
+                            <ng-container *ngIf="variant.alleleRegistryId; else noAlleleRegistry">
+                                <cvc-link-tag 
+                                    [href]="'https://reg.genome.network/allele/' + variant.alleleRegistryId + '.html'"
+                                    tooltip="View on ClinGen Allele Registry">
+                                    {{ variant.alleleRegistryId }}
+                                </cvc-link-tag>
+                            </ng-container>
                             <ng-template #noAlleleRegistry>
                                 <span nz-typography nzType="secondary">None provided</span>
                             </ng-template>
                         </nz-descriptions-item>
 
                         <!-- clinvar ids-->
-                        <nz-descriptions-item [nzTitle]="variant.clinvarIds.length > 1 ? 'ClinVar IDs' : 'ClinVar ID'">
+                        <nz-descriptions-item [nzSpan]="2" [nzTitle]="variant.clinvarIds.length > 1 ? 'ClinVar IDs' : 'ClinVar ID'">
                             <ng-container *ngIf="variant.clinvarIds.length > 0 else noClinvarIds">
                                 <cvc-tag-list *ngIf="variant.clinvarIds[0] !== 'N/A' else clinvarNotApplicable">
                                     <ng-container *ngFor="let id of variant.clinvarIds">
@@ -74,14 +79,29 @@
                                 <span nz-typography nzType="secondary">None provided</span>
                             </ng-template>
                         </nz-descriptions-item>
-                        <nz-descriptions-item nzSpan="2" *ngIf="this.displayMps.length > 0" nzTitle="Other Molecular Profiles">
+
+                        <nz-descriptions-item
+                            [nzSpan]="2"
+                            nzTitle="OpenCRAVAT">
+                            <cvc-link-tag *ngIf="variant.openCravatUrl; else noCravat"
+                                [href]="variant.openCravatUrl"
+                                tooltip="View on OpenCRAVAT">
+                                Variant Report
+                            </cvc-link-tag>
+                            <ng-template #noCravat>
+                                <span nz-typography nzType="secondary">Allele Registry ID required.</span>
+                            </ng-template>
+                        </nz-descriptions-item>
+
+
+                        <nz-descriptions-item [nzSpan]="4" *ngIf="this.displayMps.length > 0" nzTitle="Other Molecular Profiles">
                             <cvc-tag-list>
                                 <ng-container *ngFor="let mp of this.displayMps">
                                     <cvc-molecular-profile-tag [molecularProfile]="mp" [truncateLongName]="true"></cvc-molecular-profile-tag>
                                 </ng-container>
                                 <ng-container *ngIf="variant.molecularProfiles.totalCount > (this.displayMps.length + 1)">
                                     <a routerLink="/variants/{{variant.id}}/summary">
-                                        + {{ variant.molecularProfiles.totalCount - this.displayMps.length}} more
+                                       + view {{ variant.molecularProfiles.totalCount - this.displayMps.length}} more
                                     </a>
                                 </ng-container>
                             </cvc-tag-list>
