--- a/client/src/app/forms2/components/entity-select/entity-select.component.html
+++ b/client/src/app/forms2/components/entity-select/entity-select.component.html
@@ -19,7 +19,8 @@
   [nzOptions]="cvcOptions || []"
   [nzDropdownRender]="cvcDropdownExtra || null"
   [nzNotFoundContent]="searchMessages"
-  (nzOpenChange)="cvcOnOpenChange.next($event)"
+  [nzOpen]="cvcSelectOpen"
+  (nzOpenChange)="onOpenChange$.next($event)"
   (nzOnSearch)="cvcOnSearch.next($event)"
   (ngModelChange)="cvcOnModelChange.next($event)">
 </nz-select>
