entity-select empty searches showing addEntity forms

--- a/client/src/app/forms2/components/entity-select/entity-select.component.html
+++ b/client/src/app/forms2/components/entity-select/entity-select.component.html
@@ -10,7 +10,7 @@
   [nzCustomTemplate]="cvcCustomTemplate || null"
   [nzOptionHeightPx]="30"
   [nzDisabled]="cvcDisabled"
-  [nzLoading]="cvcLoading"
+  [nzLoading]="onLoading$ | ngrxPush"
   [nzAllowClear]="cvcAllowClear"
   [nzBorderless]="cvcBorderless"
   [nzSuffixIcon]="'search'"
