implemented minSearchStrLength feature for entity-select mixin, component

--- a/client/src/app/forms2/types/source-select/source-select.type.html
+++ b/client/src/app/forms2/types/source-select/source-select.type.html
@@ -16,7 +16,7 @@
   </nz-col>
   <nz-col nzSpan="21">
     <cvc-entity-select
-      [cvcMinSearchStrLength]="1"
+      [cvcMinSearchStrLength]="props.minSearchStrLength"
       [cvcSelectMode]="props.isMultiSelect ? 'multiple' : 'default'"
       [cvcCustomTemplate]="selectedTemplate"
       [cvcFormControl]="formControl"
