--- a/client/src/app/forms2/types/source-select/source-quick-add/source-quick-add.form.html
+++ b/client/src/app/forms2/types/source-select/source-quick-add/source-quick-add.form.html
@@ -1,3 +1,6 @@
+<ng-container *ngrxLet="formMessageDisplay$ as display">
+  {{ display | json }}
+</ng-container>
 <cvc-form-submission-status-display
   [mutationState]="this.mutationState"
   entityType="Source"
