source-quick-add not found message logic working-ish

--- a/client/src/app/forms2/types/source-select/source-quick-add/source-quick-add.form.html
+++ b/client/src/app/forms2/types/source-select/source-quick-add/source-quick-add.form.html
@@ -1,5 +1,10 @@
 <ng-container *ngrxLet="formMessageDisplay$ as display">
-  {{ display | json }}
+  <span
+    *ngIf="display.showSpinner"
+    nz-icon
+    [nzType]="'loading'"></span
+  >&nbsp;
+  <span>{{ display.message }}</span>
 </ng-container>
 <cvc-form-submission-status-display
   [mutationState]="this.mutationState"
