source-quick-add not found logic working

--- a/client/src/app/forms2/types/source-select/source-quick-add/source-quick-add.form.html
+++ b/client/src/app/forms2/types/source-select/source-quick-add/source-quick-add.form.html
@@ -28,9 +28,10 @@
       </nz-col>
       <nz-col nzSpan="24">
         <button
+          *ngrxLet="checkResult$ as result"
           nz-button
           nzType="primary"
-          [disabled]="!form.valid"
+          [disabled]="result.citation === null"
           nzBlock>
           Add Source
         </button>
