source-select auto-selects newly created Source

--- a/client/src/app/forms2/types/source-select/source-select.type.html
+++ b/client/src/app/forms2/types/source-select/source-select.type.html
@@ -31,6 +31,7 @@
       [cvcLoading]="isLoading$ | ngrxPush"
       [cvcAddEntity]="addSource"
       [cvcAddEntityModel]="onModel$ | ngrxPush"
+      [cvcSelectOpen]="selectOpen$ | ngrxPush"
       (cvcOnSearch)="onSearch$.next($event)"
       (cvcOnModelChange)="props.change && props.change(field, $event)">
     </cvc-entity-select>
