source-select provides source type ID prompts

--- a/client/src/app/forms2/types/disease-select/disease-select.type.html
+++ b/client/src/app/forms2/types/disease-select/disease-select.type.html
@@ -50,6 +50,7 @@
               "></span
           ></em>
         </ng-container>
+        {{ searchString }}
       </span>
     </ng-template>
   </ng-container>
