--- a/client/src/app/forms2/types/variant-select/variant-select.type.html
+++ b/client/src/app/forms2/types/variant-select/variant-select.type.html
@@ -15,6 +15,7 @@
   [cvcLoading]="isLoading$ | ngrxPush"
   [cvcParamName]="onGeneName$ | ngrxPush"
   (cvcOnSearch)="onSearch$.next($event)"
+  (cvcOnOpenChange)="onOpenChange$.next($event)"
   (cvcOnModelChange)="props.change && props.change(field, $event)">
 </cvc-entity-select>
 
