updated other entity-select fields to handle updated message logic

--- a/client/src/app/forms2/types/phenotype-select/phenotype-select.type.html
+++ b/client/src/app/forms2/types/phenotype-select/phenotype-select.type.html
@@ -11,6 +11,7 @@
   [cvcDisabled]="onRequiresPhenotype$ && !(onRequiresPhenotype$ | ngrxPush)"
   [cvcLoading]="isLoading$ | ngrxPush"
   (cvcOnSearch)="onSearch$.next($event)"
+  (cvcOnOpenChange)="onOpenChange$.next($event)"
   (cvcOnModelChange)="props.change && props.change(field, $event)">
 </cvc-entity-select>
 
