--- a/client/src/app/forms2/types/disease-select/disease-select.type.html
+++ b/client/src/app/forms2/types/disease-select/disease-select.type.html
@@ -13,6 +13,7 @@
   [cvcLoading]="isLoading$ | ngrxPush"
   [cvcSelectOpen]="selectOpen$ | ngrxPush"
   (cvcOnSearch)="onSearch$.next($event)"
+  (cvcOnOpenChange)="onOpenChange$.next($event)"
   (cvcOnModelChange)="props.change && props.change(field, $event)">
 </cvc-entity-select>
 
