mp-builder updates molecularProfileId on parent form

--- a/client/src/app/forms2/components/entity-select/entity-select.component.html
+++ b/client/src/app/forms2/components/entity-select/entity-select.component.html
@@ -3,6 +3,7 @@
   nzServerSearch
   nzAllowClear
   [class.ng-dirty]="cvcShowError"
+  [nzDropdownMatchSelectWidth]="false"
   [formControl]="cvcFormControl"
   [formlyAttributes]="cvcFormlyAttributes"
   [nzMode]="cvcSelectMode"
