--- a/client/src/app/forms2/wrappers/form-field/form-field.wrapper.less
+++ b/client/src/app/forms2/wrappers/form-field/form-field.wrapper.less
@@ -68,6 +68,7 @@ nz-form-item.layout-horizontal {
       cursor: help;
     }
     span.icon-spacer {
+      background-color: red;
       font-size: @helpIconSize;
       opacity: 0;
     }
