--- a/client/src/app/forms2/types/molecular-profile-builder/molecular-profile-builder.type.html
+++ b/client/src/app/forms2/types/molecular-profile-builder/molecular-profile-builder.type.html
@@ -1,3 +1,7 @@
-<ng-container *ngFor="let field of field.fieldGroup">
-  <formly-field [field]="field"></formly-field>
-</ng-container>
+<nz-row [nzGutter]="[6, 6]">
+  <nz-col
+    *ngFor="let field of field.fieldGroup"
+    [nzSpan]="field.props!.colSpan">
+    <formly-field [field]="field"></formly-field>
+  </nz-col>
+</nz-row>
