--- a/client/src/app/components/revisions/revision-list/revision-list.component.html
+++ b/client/src/app/components/revisions/revision-list/revision-list.component.html
@@ -11,6 +11,16 @@
         [nzActive]="true"
       >
         <ng-container [ngSwitch]="revision.fieldName">
+          <ng-container *ngSwitchCase="'gene_id'">
+            <cvc-revision-list-diff
+              [diffObject]="revision.linkoutData.diffValue"
+              entityType="Gene">
+              {{revision.linkoutData.diffValue | json}}
+              <ng-template #itemTemplate let-item>
+                <cvc-gene-tag [gene]="{id: item.id, name: item.displayName, link: item.link}"></cvc-gene-tag>
+              </ng-template>
+            </cvc-revision-list-diff>
+          </ng-container>
           <ng-container *ngSwitchCase="'source_ids'">
             <cvc-revision-list-diff
               [diffObject]="revision.linkoutData.diffValue"
